--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "prepublish": "npm run build -s",
+    "install": "npm run build -s",
     "build": "babel src --out-dir lib --sourceRoot=./ --copy-files --source-maps --presets=es2015,es2016,es2017,stage-3,stage-2",
     "build:watch": "npm run build -s -- -w",
     "pretest": "npm run lint",
