--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mup",
+  "name": "malua-mup-fork",
   "version": "1.4.6",
   "description": "Production Quality Meteor Deployments",
   "main": "lib/index.js",
@@ -23,7 +23,6 @@
   },
   "scripts": {
     "prepublish": "npm run build -s",
-    "install": "npm run build -s",
     "build": "babel src --out-dir lib --sourceRoot=./ --copy-files --source-maps --presets=es2015,es2016,es2017,stage-3,stage-2",
     "build:watch": "npm run build -s -- -w",
     "pretest": "npm run lint",
